--- a/app/src/main/res/layout/activity_reasult.xml
+++ b/app/src/main/res/layout/activity_reasult.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".BookListActivity">
+    tools:context=".ReasultActivity">
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
-        android:id="@+id/booklist"
+        android:id="@+id/rel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
