--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,12 @@
 
     </SearchView>
 
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
@@ -26,4 +32,5 @@
         android:gravity="center"
         android:numColumns="3"
         android:visibility="visible" />
+
 </LinearLayout>
