--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#008560</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#5C804D</color>
+    <color name="colorg">#5C804D</color>
+    <color name="colorlg">#bed96f</color>
+    <color name="colory">#FFE873</color>
+    <color name="coloro">#ff8a54</color>
+    <color name="colorr">#910000</color>
+
 </resources>
