--- a/app/src/main/res/menu/add_new_book.xml
+++ b/app/src/main/res/menu/add_new_book.xml
@@ -5,8 +5,7 @@
 
     <item
         android:id="@+id/addNewBook"
-        android:icon="@drawable/newa"
+        android:icon="@drawable/add"
         android:title="添加新书"
-        app:showAsAction="always"
-        />
+        app:showAsAction="always" />
 </menu>
